Fixed word overlapping
Navbar testimonials and contact words overlapping on smaller devices, margin removed, letter spacing removed and font weight removed

--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -3,9 +3,6 @@
     font-family: "Montserrat", sans-serif; 
     font-size: 25px;
     background-color: #696969;
-    font-weight: 600;
-    padding: 15px;
-    letter-spacing: 2px;
     text-align: center;
 }
  .navstyle{
